--- a/index.html
+++ b/index.html
@@ -7,8 +7,42 @@
 </head>
 <body>
         <div class="page">
-        <header></header>
-        <main></main>
+        <header>
+            <img src="assest/treine.me.svg" alt="treine me">
+
+            <nav>
+                <ul>
+                    <li><a href="#"></a>Home</li>
+                    <li><a href="#"></a>Sobre</li>
+                    <li><a href="#"></a>Treine</li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section class="text">
+                <h1>
+                    Treinos exclusivos
+                    para você!
+                </h1>
+
+                <p>
+                    Nós criamos <strong>treinos exclusivos e únicos para você.</strong><br>
+                    Invista no seu corpo e <strong>tenha muito mais performance</strong> e
+                    qualidade de vida.
+                </p>
+                 <button>
+                    <img src="assest/icon-btn.svg" alt="Icone do whatssap">
+                    Comese já
+                </button>
+            </section>
+
+            <img src="assest/fitness-jump.svg" alt="Um desenho de uma mulher pulando corda!">
+
+
+
+
+        </main>
         <footer></footer>
         </div> 
 
