removendo nav do header.

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
         <div class="page">
-        <header>
-            <img src="assest/treine.me.svg" alt="treine me">
 
+            
             <nav>
+                <a id="logo" href="#">
+                    <img src="assest/treine.me.svg" alt="treine me">
+                </a>
                 <ul>
                     <li><a href="#"></a>Home</li>
                     <li><a href="#"></a>Sobre</li>
                     <li><a href="#"></a>Treine</li>
                 </ul>
             </nav>
-        </header>
+
 
         <main>
             <section class="text">
