--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Treine me</title>
 </head>
 <body>
@@ -15,9 +18,9 @@
                     <img src="assest/treine.me.svg" alt="treine me">
                 </a>
                 <ul>
-                    <li><a href="#"></a>Home</li>
-                    <li><a href="#"></a>Sobre</li>
-                    <li><a href="#"></a>Treine</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Treine</a></li>
                 </ul>
             </nav>
 
