--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <main>
             <section class="text">
                 <h1>
-                    Treinos exclusivos
+                    Treinos <span>exclusivos</span>
                     para você!
                 </h1>
 
@@ -46,7 +46,7 @@
             <img src="assest/fitness-jump.svg" alt="Um desenho de uma mulher pulando corda!">
         </main>
         <footer>
-            fale concosco no instagram @treine.me
+            fale concosco no <a href="#">instagram</a> <a href="#">@treine.me</a>
         </footer>
         </div> 
         <img src="assest/greenballs.svg" alt="Bolinhas verdes decorativas">
