--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     qualidade de vida.
                 </p>
                  <button>
-                    <img src="assest/icon-btn.svg" alt="Icone do whatssap">
+                    <img id="icon-btn" src="assest/icon-btn.svg" alt="Icone do whatssap">
                     Comese já
                 </button>
             </section>
