--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </button>
             </section>
 
-            <img src="assest/fitness-jump.svg" alt="Um desenho de uma mulher pulando corda!">
+            <img  src="assest/fitness-jump.svg" alt="Um desenho de uma mulher pulando corda!">
 
         </main>
 
@@ -49,7 +49,7 @@
             fale concosco no <a href="#">instagram</a> <a href="#">@treine.me</a>
         </footer>
         </div> 
-        <img src="assest/greenballs.svg" alt="Bolinhas verdes decorativas">
+        <img id="balls" src="assest/greenballs.svg" alt="Bolinhas verdes decorativas">
 
 </body>
 </html>
