--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </h1>
 
                 <p>
-                    Nós criamos <strong>treinos exclusivos e únicos para você.</strong><br>
+                    Nós criamos <strong>treinos exclusívos e únicos para você.</strong><br>
                     Invista no seu corpo e <strong>tenha muito mais performance</strong> e
                     qualidade de vida.
                 </p>
