fix. button, text

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
                     Invista no seu corpo e <strong>tenha muito mais performance</strong> e
                     qualidade de vida.
                 </p>
+
                  <button>
-                    <img id="icon-btn" src="assest/icon-btn.svg" alt="Icone do whatssap">
-                    Comese já
-                </button>
+                    <img src="assest/icon-btn.svg" alt="Icone do whatssap">
+                      Comece já
+                 </button>
             </section>
 
             <img  src="assest/fitness-jump.svg" alt="Um desenho de uma mulher pulando corda!">
