--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </main>
 
         <footer>
-            fale concosco no <a href="#">instagram</a> <a href="#">@treine.me</a>
+            fale conosco no <a href="#">instagram</a> <a href="#">@treine.me</a>
         </footer>
         </div> 
         <img id="balls" src="assest/greenballs.svg" alt="Bolinhas verdes decorativas">
