--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
         <div class="page">
             <nav>
-                <a id="logo" href="#">
-                    <img src="assest/treine.me.svg" alt="treine me">
+                <a href="#">
+                    <img id="logo"src="assest/treine.me.svg" alt="treine me">
                 </a>
                 <ul>
                     <li><a href="#">Home</a></li>
